examples/type_system/failing/16_inferred_effect_missing_on_typed_caller.flx
// E400: caller declares `with Time` but invokes an IO function.

fn sink(msg: String) -> Unit with IO {
    print(msg)
}

fn typed_time_only() -> Int with Time {
    sink("hello")
    1
}

typed_time_only()
